--- a/client/package.json
+++ b/client/package.json
@@ -12,8 +12,13 @@
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@reduxjs/toolkit": "^2.8.2",
+    "html5-qrcode": "^2.3.8",
+    "jsqr": "^1.4.0",
+    "leaflet": "^1.9.4",
+    "qrcode.react": "^4.2.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.6.0",
     "react-toastify": "^11.0.5",
